crates/aura-terminal/tests/ui/create_account_without_owner.rs
use std::sync::Arc;

use aura_terminal::tui::callbacks::CreateAccountCallback;

fn main() {
    let _: CreateAccountCallback = Arc::new(|_name: String| {});
}
